[project]
name = "cart"
version = "0.1.12"
description = "Quickly map output from postgis in your browser."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "folium>=0.20.0",
    "geopandas>=1.1.0",
    "mapclassify>=2.9.0",
    "matplotlib>=3.10.3",
    "psycopg>=3.2.9",
    "sqlalchemy>=2.0.41",
]

[project.scripts]
cart="main:main"
